--- a/references.bib
+++ b/references.bib
@@ -427,9 +427,28 @@
 }
 
 @misc{faiss-blog,
-	title = {Blog: Faiss, A library for efficient similarity searc},
-	howpublished = {\url{https://code.fb.com/data-infrastructure/faiss-a-library-for-efficient-similarity-search/}}
+	title = {{Blog: Faiss, A library for efficient similarity search}},
+	howpublished={\url{https://code.fb.com/data-infrastructure/faiss-a-library-for-efficient-similarity-search/}}
 }
 
+@inproceedings{krizhevsky2012imagenet,
+	title={Imagenet classification with deep convolutional neural networks},
+	author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+	booktitle={Advances in neural information processing systems},
+	pages={1097--1105},
+	year={2012}
+}
+
+@misc{convnet-fig,
+	title = {{Deep Learning for Java}},
+	howpublished={\url{https://deeplearning4j.org/}}
+}
+
+@article{simonyan2014very,
+	title={Very deep convolutional networks for large-scale image recognition},
+	author={Simonyan, Karen and Zisserman, Andrew},
+	journal={arXiv preprint arXiv:1409.1556},
+	year={2014}
+}
 
 
